--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>KogeGo Activity</h1>
     <h2>First Day Marlongit</h2>
-    <h3>4th Activity of Kodego</h3>
+    <h3>4th Activity of Kodego jethro</h3>
 </body>
 </html>
