--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>KogeGo Activity</h1>
-    <h2>First Day Marlongit</h2>
+    <h2>First Day Marlongit11</h2>
     <h3>4th Activity of Kodego jethro1</h3>
 </body>
 </html>
