First code commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <h1>KogeGo Activity</h1>
     <h2>First Day Marlon</h2>
-    <h3>4th Activity of Kodego Marlon Venz 3</h3>
+    <h3>4th Activity of Kodego Marlon Venz 3 Pull Request</h3>
+    <h4>Git Branch</h4>
+
+
+    <p>Lorem ipsumS dolor sit amet consectetur adipisicing elit. Totam aut dolorum facilis tenetur accusantium sunt iusto nam eveniet vel!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adSipisicing elit. Deleniti corrupti eius molestias. </p>
+
+    
 </body>
 </html>
